// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`openApiPyClientGenerator - arrays > should handle dictionary (additionalProperties) responses > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class GetCountsApiError(ApiError):
    """Raised when \`get_counts\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def get_counts(
        self,
    ) -> types_gen.GetCounts200Response:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        response = self._client.request(
            "GET",
            self._url("/counts", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(types_gen.GetCounts200Response).validate_python(
                response.json()
            )
        raise GetCountsApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle dictionary (additionalProperties) responses > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never


GetCounts200Response = dict[str, int]

GetCountsError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of objects > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class CreateUsersApiError(ApiError):
    """Raised when \`create_users\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def create_users(
        self,
        body: list[types_gen.User],
    ) -> list[types_gen.User]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = self._dump(body)
        request_kwargs: dict[str, Any] = {"json": body}
        if body is not None and not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        response = self._client.request(
            "POST",
            self._url("/create-users", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[types_gen.User]).validate_python(response.json())
        raise CreateUsersApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of objects > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, Optional, TypedDict

from pydantic import BaseModel, ConfigDict


class User(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    username: str
    email: Optional[str] = None


class CreateUsersRequest(TypedDict):
    body: list["User"]


CreateUsersError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of strings > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class ProcessTagsApiError(ApiError):
    """Raised when \`process_tags\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def process_tags(
        self,
        body: list[str],
    ) -> types_gen.ProcessTags200Response:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = self._dump(body)
        request_kwargs: dict[str, Any] = {"json": body}
        if body is not None and not self._config.omit_content_type_header:
            header_params.setdefault("Content-Type", "application/json")
        response = self._client.request(
            "POST",
            self._url("/process-tags", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return types_gen.ProcessTags200Response.model_validate(response.json())
        raise ProcessTagsApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which accepts an array of strings > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never, TypedDict

from pydantic import BaseModel, ConfigDict


class ProcessTags200Response(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    processed: int


class ProcessTagsRequest(TypedDict):
    body: list[str]


ProcessTagsError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns a nested array of strings > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class GetMatrixApiError(ApiError):
    """Raised when \`get_matrix\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def get_matrix(
        self,
    ) -> list[list[str]]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        response = self._client.request(
            "GET",
            self._url("/matrix", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[list[str]]).validate_python(response.json())
        raise GetMatrixApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns a nested array of strings > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never


GetMatrixError = Never
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns an array of objects > client_gen.py 1`] = `
""""TestApi — AUTO-GENERATED synchronous client."""

from __future__ import annotations

import datetime
from dataclasses import dataclass, field
from typing import Any, Never, Optional
from urllib.parse import quote

import httpx
from pydantic import BaseModel, TypeAdapter

from . import types_gen


class ApiError(Exception):
    """Base class for all API errors.

    Subclasses are generated per-operation so \`error\` can be narrowed by the
    type checker via \`isinstance\` or \`match\`.  Catch \`ApiError\` to handle
    any unexpected status code across operations.
    """

    status: int
    error: Any

    def __init__(self, status: int, error: Any = None) -> None:
        super().__init__(f"API returned status {status}")
        self.status = status
        self.error = error


class ListUsersApiError(ApiError):
    """Raised when \`list_users\` returns a non-success status."""

    error: Never


@dataclass
class TestApiConfig:
    """Client configuration for TestApi."""

    url: str
    httpx_client: Optional[httpx.Client] = None
    headers: dict[str, str] = field(default_factory=dict)
    omit_content_type_header: bool = False


class TestApi:
    """Synchronous API client for TestApi."""

    def __init__(self, config: TestApiConfig) -> None:
        self._config = config
        self._client = config.httpx_client or httpx.Client()
        self._owns_client = config.httpx_client is None
        self._base_url = config.url.rstrip("/")

    def __enter__(self) -> "TestApi":
        return self

    def __exit__(self, *exc: Any) -> None:
        self.close()

    def close(self) -> None:
        if self._owns_client:
            self._client.close()

    def _url(self, path: str, path_params: dict[str, Any]) -> str:
        for key, value in path_params.items():
            path = path.replace("{" + key + "}", quote(str(value), safe=""))
        return self._base_url + path

    def _query(
        self,
        query_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> dict[str, Any]:
        out: dict[str, Any] = {}
        for key, value in query_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "multi")
                if fmt == "csv":
                    out[key] = ",".join(str(v) for v in value)
                else:
                    out[key] = [str(v) for v in value]
            elif isinstance(value, bool):
                out[key] = "true" if value else "false"
            elif isinstance(value, (datetime.date, datetime.datetime)):
                out[key] = value.isoformat()
            else:
                out[key] = value
        return out

    def _headers(
        self,
        header_params: dict[str, Any],
        collection_formats: Optional[dict[str, str]] = None,
    ) -> list[tuple[str, str]]:
        out: list[tuple[str, str]] = [(k, v) for k, v in self._config.headers.items()]
        for key, value in header_params.items():
            if value is None:
                continue
            if isinstance(value, list):
                fmt = (collection_formats or {}).get(key, "csv")
                if fmt == "multi":
                    for item in value:
                        out.append((key, str(item)))
                else:
                    out.append((key, ",".join(str(v) for v in value)))
            else:
                out.append((key, str(value)))
        return out

    def _cookies(self, cookie_params: dict[str, Any]) -> dict[str, str]:
        return {k: str(v) for k, v in cookie_params.items() if v is not None}

    def _dump(self, value: Any) -> Any:
        if value is None:
            return None
        if isinstance(value, BaseModel):
            return value.model_dump(mode="json", by_alias=True, exclude_unset=True)
        if isinstance(value, list):
            return [self._dump(v) for v in value]
        if isinstance(value, dict):
            return {k: self._dump(v) for k, v in value.items()}
        if isinstance(value, (datetime.date, datetime.datetime)):
            return value.isoformat()
        return value

    def list_users(
        self,
    ) -> list[types_gen.User]:
        path_params: dict[str, Any] = {}
        query_params: dict[str, Any] = {}
        header_params: dict[str, Any] = {}
        cookie_params: dict[str, Any] = {}
        collection_formats: Optional[dict[str, str]] = None
        body = None
        request_kwargs: dict[str, Any] = {}
        response = self._client.request(
            "GET",
            self._url("/users", path_params),
            params=self._query(query_params, collection_formats),
            headers=self._headers(header_params, collection_formats),
            cookies=self._cookies(cookie_params),
            **request_kwargs,
        )
        if response.status_code == 200:
            return TypeAdapter(list[types_gen.User]).validate_python(response.json())
        raise ListUsersApiError(response.status_code, None)
"
`;

exports[`openApiPyClientGenerator - arrays > should handle operation which returns an array of objects > types_gen.py 1`] = `
""""Types for TestApi — AUTO-GENERATED, do not edit."""

from __future__ import annotations

from typing import Never

from pydantic import BaseModel, ConfigDict


class User(BaseModel):
    model_config = ConfigDict(populate_by_name=True, extra="allow")

    id: int


ListUsersError = Never
"
`;
